; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_convert_num_notes_to_fanout.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_convert_num_notes_to_fanout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @convert_num_notes_to_fanout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @convert_num_notes_to_fanout(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  store i8 0, i8* %3, align 1
  br label %4

4:                                                ; preds = %8, %1
  %5 = load i32, i32* %2, align 4
  %6 = ashr i32 %5, 8
  store i32 %6, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i8, i8* %3, align 1
  %10 = add i8 %9, 1
  store i8 %10, i8* %3, align 1
  br label %4

11:                                               ; preds = %4
  %12 = load i8, i8* %3, align 1
  ret i8 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
